--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/all.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/icon.css">
-    <title>SN anydevices</title>
+    <title>SN AnyDevice Software Solutions</title>
 
     <!-- Bootstrap core CSS -->
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -42,8 +42,8 @@
             <a href="#" id="top" class="nav-item nav-link active">Home</a>
             <a href="#products" class="nav-item nav-link">Products</a>
             <a href="#about" class="nav-item nav-link">About us</a>
-            <a href="#contact" class="nav-item nav-link">contact us</a>
-            <a href="#locate" class="nav-item nav-link" tabindex="-1">locate us</a>
+            <a href="#contact" class="nav-item nav-link">Contact us</a>
+            <a href="#locate" class="nav-item nav-link" tabindex="-1">Locate us</a>
         </div>
     </div>
 </nav>
@@ -54,10 +54,10 @@
       <img src="assets/images/SN-Logo-Part.png">
      </div>
      <div>
-        <label class="text-left pl-2 text-white fs-24 font-weight-bold">SN AnyDevice<br>Software Solution</label>
+        <label class="text-left pl-2 text-white fs-24 font-weight-bold">SN AnyDevice<br>Software Solutions</label>
      </div>
    </div>
-    <p class="lead font-weight-normal text-white" id="home">At SN AnyDevice Software Solutions, we discover what is important and try to make it happen.At SN AnyDevice Software Solutions, we discover what is important and try to make it happen. </p>
+    <p class="lead font-weight-normal text-white" id="home">At SN AnyDevice Software Solutions, we discover what is important and try to make it happen.At SN AnyDevice Software Solutions, we discover what is important and try to make it happen.</p>
   </div>
   <div>
     
