--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     <div class="carousel-item active">
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3 py-2">
           <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden"  id="product1">
-               <img src="assets/images/product1/logo.png" class="logo">
+               <a href="expensetrkr/index.html">
+                <img src="assets/images/product1/logo.png" class="logo">
+               </a>
           </div>
             <div class="mr-md-3 pt-3 px-3 pb-3 pt-md-5 px-md-5 text-center overflow-hidden">
               <img src="assets/images/product1/1.png" class="screenshots">
