--- a/IncomeExpenseTracker.html
+++ b/IncomeExpenseTracker.html
@@ -1,4 +1,6 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -27,8 +29,15 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="assets/css/jumbotron.css" rel="stylesheet">
+    <link href="assets/css/image.css" rel="stylesheet">
   </head>
   <body>
+    <!-- The Modal for image pop-up -->
+    <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img01">
+      <div id="caption"></div>
+    </div>
     <nav class="navbar navbar-expand-md fixed-top bg-light navbar-light">
       <a class="navbar-brand" href="#">
         <img src="assets/images/iet-AppIcon-80.png" alt="">
@@ -37,12 +46,14 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="app-store-badge" href="https://apps.apple.com/app/spend-stack-smarter-lists/id1329068268" target="_blank">
-              <img role="presentation" src="assets/images/download-appStore.png">
-            </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#">Support</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="app-store-badge" href="https://apps.apple.com/app/spend-stack-smarter-lists/id1329068268" target="_blank">
+                <img role="presentation" src="assets/images/download-appStore.png">
+              </a>
           </li>
         </ul>
       </div>
@@ -53,8 +64,20 @@
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
     <div class="container">
-      <h1 class="display-3">Hello, world!</h1>
-      <img src="assets/images/iet/screenshot-1.png" alt="">
+      <div class="row">
+        <div class="col-md-4">
+          <img 
+            src="assets/images/iet/screenshot-1.png" 
+            alt="screenshot-1"
+            id="myImg"
+            onclick="imageClicked(document.getElementById('myImg'))"
+            />
+          <h3 class="display-5">See your transactions at glance</h3>
+          <p>From dashboard, you can see all your incomes and expeneses for current month. Tap on any date to expand or collapse group of records. </p>
+          <p>Using the button from Top-left corner, you can apply more filters. Similary you can expand or collapse all groups using second button from top-left corner. </p>
+          <p>In order to add a transaction, tap on plus button (+) which is placed at top-right corner.</p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -88,5 +111,7 @@
   <p>© Company 2017-2019</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-      <script>window.jQuery || document.write('<script src="assets/bootstrap-4.3.1/js/jquery.min.js"><\/script>')</script><script src="assets/bootstrap-4.3.1/js/bootstrap.bundle.min.js"></script>
+<script>window.jQuery || document.write('<script src="assets/bootstrap-4.3.1/js/jquery.min.js"><\/script>')</script>
+<script src="assets/bootstrap-4.3.1/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="assets/js/image.js"></script>
 </body></html>
